Changed wording to clarify the sense of 'mind' in its different meanings

--- a/chapter-interpretation.tex
+++ b/chapter-interpretation.tex
@@ -3,9 +3,9 @@
 
 \section{The role of consciousness}
 
-As it results from the preceding description of the processes taking place in the evolution of the state of God, not only the purely material processes described by the Hamiltonian evolution operator $\op U_\tau$, but also the mental processes described by the collapse operators $(\op{\Pi}_\cms)$ play a central role in the evolution of the quantum state $\ket \Psi$ of the universe. In the following, we will call `consciousness state' any collective mind state $\cms$ and `consciousness' the phenomenon of experiencing it. This phenomenon must be very carefully distinguished from the purely material processes of conscious thinking happening at the neural level within brains, although both are closely related to each other.
+As it results from the preceding description of the processes taking place in the evolution of the state of God, not only the purely material processes described by the Hamiltonian evolution operator $\op U_\tau$, but also the mental processes described by the collapse operators $(\op{\Pi}_\cms)$ play a central role in the evolution of the quantum state $\ket \Psi$ of the universe. In the following, we will call `consciousness state' any mental state $\cms$ and `consciousness' the phenomenon of experiencing it. This phenomenon must be very carefully distinguished from the purely material processes of conscious thinking happening at the neural level within brains, although both are closely related to each other.
 
-Quantum phenomena, like the superposition of an atom in an excited and a decayed state, or the superposition of a photodetector in an activated and an unactivated state -- as in the quantum measurement example given in section \ref{Quantum measurement} --, have always proved to be very puzzling to us, because they show that quantum processes don't fit within our mental categories, in which a photodetector must be either activated or not, for instance. This is not a result of a limitation of our intelligence that we could overcome by learning to think in a new way corresponding more adequately to the physical reality. No, at a very fundamental level, there isn't and there will never be any individual mind state $\ims$ corresponding to the superposition of a brain having ``seen'' a photodetector both activated and not, although this superposition does exist at the material level. This inadequacy between our mental categories and the material reality is a matter of fact having profound consequences for the process of consciousness. The contents of a consciousness state $\cms$ cannot simply be a representation of the material reality (even a partial one), because material reality explores possibilities going far beyond the realm of what we can grasp with our mental categories. An arbitrary consciousness state $\cms$ can only ``match'' more or less good the current quantum state $\ket \Psi$ of the universe, the number $\bra \Psi \op{\Pi}_\cms \ket \Psi / \braket \Psi \Psi$, lying between 0 and 1, measuring how good the fit is. If it equals 1, the fit is perfect (although $\cms$ remains a partial representation of the quantum state $\ket \Psi$) and $\cms$ is being experienced with certainty. If it equals 0, there is no fit and $\cms$ cannot be experienced. If it lies inbetween, any other consciousness state $\cms$ could be experienced too, the numbers $\bra \Psi \op{\Pi}_\cms \ket \Psi / \braket \Psi \Psi$ defining the probability law according to which the actually experienced consciousness state will be selected. So the quantum state $\ket \Psi$ of the universe determines the contents of the experienced consciousness state $\cms$, according to a probability law reflecting how good the mental categories in $\cms$ fit the material reality $\ket \Psi$. On the other hand, and this is probably even more astonishing, the experience of the consciousness state $\cms$ will reduce the quantum state $\ket \Psi$ of the universe to its component $\op{\Pi}_\cms \ket \Psi$ corresponding to the mental categories in $\cms$. So we can say that consciousness actively shapes the material reality according to its own mental categories -- or more poetically, that you are putting human order into the world with every glance you take at it!
+Quantum phenomena, like the superposition of an atom in an excited and a decayed state, or the superposition of a photodetector in an activated and an unactivated state -- as in the quantum measurement example given in section \ref{Quantum measurement} --, have always proved to be very puzzling to us, because they show that quantum processes don't fit within our mental categories, in which a photodetector must be either activated or not, for instance. This is not a result of a limitation of our intelligence that we could overcome by learning to think in a new way corresponding more adequately to the physical reality. No, at a very fundamental level, there isn't and there will never be any subjective experience $\ims$ corresponding to the superposition of a brain having ``seen'' a photodetector both activated and not, although this superposition does exist at the material level. This inadequacy between our mental categories and the material reality is a matter of fact having profound consequences for the process of consciousness. The contents of a consciousness state $\cms$ cannot simply be a representation of the material reality (even a partial one), because material reality explores possibilities going far beyond the realm of what we can grasp with our mental categories. An arbitrary consciousness state $\cms$ can only ``match'' more or less good the current quantum state $\ket \Psi$ of the universe, the number $\bra \Psi \op{\Pi}_\cms \ket \Psi / \braket \Psi \Psi$, lying between 0 and 1, measuring how good the fit is. If it equals 1, the fit is perfect (although $\cms$ remains a partial representation of the quantum state $\ket \Psi$) and $\cms$ is being experienced with certainty. If it equals 0, there is no fit and $\cms$ cannot be experienced. If it lies inbetween, any other consciousness state $\cms$ could be experienced too, the numbers $\bra \Psi \op{\Pi}_\cms \ket \Psi / \braket \Psi \Psi$ defining the probability law according to which the actually experienced consciousness state will be selected. So the quantum state $\ket \Psi$ of the universe determines the contents of the experienced consciousness state $\cms$, according to a probability law reflecting how good the mental categories in $\cms$ fit the material reality $\ket \Psi$. On the other hand, and this is probably even more astonishing, the experience of the consciousness state $\cms$ will reduce the quantum state $\ket \Psi$ of the universe to its component $\op{\Pi}_\cms \ket \Psi$ corresponding to the mental categories in $\cms$. So we can say that consciousness actively shapes the material reality according to its own mental categories -- or more poetically, that you are putting human order into the world with every glance you take at it!
 
 In the quantum measurement example given in section \ref{Quantum measurement}, for instance, the quantum superposition of two states of the brain of the observer, having either observed the photodetector activated or not, resolves to one of the components corresponding to the mental categories `I have seen the photodetector activated' and `I haven't seen it activated yet'. Because the quantum state of the rest of the universe (here specifically the photodetector and the decaying atom) is correlated to the quantum state of the brain via sensory perception, this reduction of the quantum state of the universe to a given mental category will have consequences for the rest of the universe, too. For instance, if the observer makes the conscious experience of seeing the photodetector activated, the state of the photodetector will also reduce to the activated state only, because the unactivated state is only correlated to the component of the state of the brain corresponding to the mental category `I haven't seen the photodetector activated yet', which is being dropped. So the mental categories, which only concern the quantum state of the brain originally, get transposed to external objects via the correlation induced by sensory perception between them and the brain in the quantum state $\ket \Psi$ of the universe. Similarly, the state of the decaying atom will also reduce to the decayed state because the non-decayed state is only correlated to the component of the state of the brain corresponding to the mental category `I haven't seen the photodetector activated yet', which is being dropped.
 
