--- a/chapter-introduction.tex
+++ b/chapter-introduction.tex
@@ -16,7 +16,7 @@ Most philosophers have ascribed a central role to the ethics in their work, as t
 \section*{Abstract}
 \addcontentsline{toc}{section}{\protect Abstract}
 
-In the formulation of Quantum Field Theory proposed in this book, Nature presents the two aspects of a material and of a mental world in mutual interaction. The mental world can be adequately experienced by the collectivity of all sentient beings: A state of the mental world is given by a set of a various number of individual minds with definite conscious thoughts. Though we are experiencing this mental world directly, we only experience it partially under the aspect of a single individual mind (which we're used to call ``our'' mind), and must communicate with others in order to get closer to an adequate representation of the mental world as a whole. Communication happens in the material world, which is an aspect of Nature that we don't experience directly but only through its influence on our subjective mental experience. This material world, best described in terms of quantum fields, is by nature holistic and doesn't involve precise boundaries of individual bodies as they may exist for individual minds. A state of this material world is given by a quantum superposition of so-called localized states, which are given by the number of elementary particles of each kind present at each point of space. Each quantum state can be uniquely decomposed into a sum of components corresponding to each possible mental state, and this decomposition defines a probability law on the set of all possible mental states. The joined temporal evolution of both aspects of Nature is a tree-steps process repeated indefinitely: First, the initial state of the material world undergoes a deterministic, Hamiltonian evolution of a given, ``elementary'' duration. Then, the final quantum state defines a probability law according to which a mental state is being selected and becomes collectively experienced. Finally, the component of the quantum state corresponding to the selected mind state becomes the initial state of the next evolution process. In this world view, the mystery of consciousness consists in the fact that there is, to some extent, an adequation between the conscious thoughts of individual minds and some physical processes happening in the corresponding quantum states, e.g. the biological processes of consciousness within a human brain.
+In the formulation of Quantum Field Theory proposed in this book, Nature presents the two aspects of a material and of a mental world in mutual interaction. The mental world can be adequately experienced by the collectivity of all sentient beings: A state of the mental world is given by the number of subjects having each possible subjective experience. Though we are experiencing this mental world directly, we only experience it partially under the aspect of a single subjective experience, and must communicate with others subjects in order to get closer to an adequate representation of the mental world as a whole. However, communication happens only via the material world, which is an aspect of Nature that we don't experience directly but only through its influence on our subjective experience. This material world, best described in terms of quantum fields, is by nature holistic and doesn't involve precise boundaries of individual bodies. A state of this material world is given by a quantum superposition of so-called localized states, which are given by the number of elementary particles of each kind present at each point of space. Each quantum state can be uniquely decomposed into a sum of components corresponding to each possible mental state, and this decomposition defines a probability law on the set of all possible mental states. The joined temporal evolution of both aspects of Nature is a tree-steps process repeated indefinitely: First, the initial state of the material world undergoes a deterministic, Hamiltonian evolution of a given, ``elementary'' duration. Then, the final quantum state defines a probability law according to which a mental state is being selected and becomes experienced by a various number of subjects. Finally, the component of the quantum state corresponding to the selected mental state becomes the initial state of the next evolution process. In this world view, the mystery of consciousness consists in the fact that there is, to some extent, an adequation between subjective experiences and the physical processes happening in the corresponding quantum states, e.g. the biological processes of consciousness within a human brain.
 
 \section*{Overview}
 \addcontentsline{toc}{section}{\protect Overview}
