--- a/chapter-mental-states.tex
+++ b/chapter-mental-states.tex
@@ -8,13 +8,13 @@
 
 Since the end of the second World War and the translation of the intellectual center of the scientific community from Europe to the United States of America, materialism, \textit{i.e.} the complete reduction of our experience of mind to purely material processes, has become the philosophical conviction of mainstream physicists, although they still may have opposite religious beliefs as private persons. Of course, it doesn't make any doubt that the biological activity of human and similar animal brains is involved in the processing of external and internal stimuli, and it is reasonable to believe that, at the material level, conscious thinking is the emerging result of an intensive and highly parallelized information processing activity by the brain's neural network. Nevertheless, ``mind'', \textit{i.e.} the form of our experience of the world, with our feelings, our body schema, memories seen with the mind's eye, melodies imagined in the mind's ear... is just not \textit{the same} as the neural activity of an individual body (which is anyhow hardly identifiable quantum physically). Determining the relation between these two realities is the essence of the mind-body problem, which has become the most various answers over the ages. The usual divergence points arise about the questions: Do both realities exist at all, or is one of them a mere illusion? Are they independent of each other and just exist as parallel realities, or are there divergences and a mutual influence in the one, the other or both directions? In this old debate, Quantum Field Theory introduces the new idea that a mutual influence doesn't have to be a deterministic causal influence but also could be a probabilistic one, so that neither ``mind'' nor ``body'' have to be kind of a subordinated slave of its counterpart, but retain to some extent a form of ``freedom'' under its influence. I think this idea should have the potential to take some heat out of the debate.
 
-\section{Individual mind}
+\section{Subjective experience}
 
-Each of us has a direct experience of the reality of an individual mind, so I will only expose a few reflections in this place. I think that the state of an individual mind should be considered in its ``organic'' unity, that picking out single conscious thoughts and considering that the state of this mind is simply composed of these should be considered as an oversimplified and inadequate view. Within this ``organic'' unity, however, the intensity of consciousness may vary, focusing our awareness on some aspects rather than on others. The border between conscious and unconscious thoughts is therefore not really clear to ourselves, as there is a slow transition made up of more or less subconscious thoughts of decreasing intensity. When I refer to the state of an individual mind, I will mean in principle the unity of all conscious and subconscious thoughts, although we're not quite sure of where they end. They will, in general, contain among other things representations of a body, of its activity, of its environment, of past experiences... as well as representations of time, which make up our feeling of being continuously ourselves in the continuity of time. But I believe that this feeling of permanence of the individual mind is a mere illusion, for two reasons: First, this feeling is experienced in every single instant of consciousness; we could by no mean find out if we really have experienced other instants of consciousness ``before'' and if these instants of consciousness correspond to our current memories or not, so this feeling of permanence \textit{could} be an illusion. In fact, if I would suddenly experience another individual mind (with its own memories and not mine), I wouldn't even notice it! Second, the experience of an individual mind seems to cease as ``our'' body is dreamless sleeping, swoon or eventually die, so I think its permanence is discarded by common experience. Therefore, I don't believe that an individual mind is a fundamental entity of the mental world, which would have an existence of its own and evolve in time, and I will only refer to instantaneous \textit{states} of an individual mind, which are not related to each other across time in the form of a personal history at a fundamental level.
+Each of us has a direct access to his own subjective experience and know how it ``feels like'' to have conscious thoughts, so I will only expose a few reflections in this place. I think that any subjective experience should be considered in its ``organic'' unity, that picking out single conscious thoughts and considering that the subjective experience is simply composed of these should be considered as an oversimplified and inadequate view. Within this ``organic'' unity, however, the intensity of consciousness may vary, focusing our awareness on some aspects rather than on others. The border between conscious and unconscious thoughts is therefore not really clear to ourselves, as there is a slow transition made up of more or less subconscious thoughts of decreasing intensity. So when I say ``subjective experience'', I mean in principle the unity of all conscious and subconscious thoughts, although we're not quite sure of where they end. They will, in general, contain among other things representations of a body, of its activity, of its environment, of past experiences... as well as representations of time, which make up our feeling of being continuously ourselves in the continuity of time. But I believe that this feeling of permanence of the subject is a mere illusion, for two reasons: First, this feeling is experienced in every single instant of consciousness; we could by no mean find out if we really have experienced other instants of consciousness ``before'' (and if there is a such thing as time in the first place) and if these instants of consciousness correspond to our current memories or not, so this feeling of permanence \textit{could} be an illusion. In fact, if I would suddenly have the subjective experiences of another subject (with its own memories and not mine), I wouldn't even notice it! Second, subjective experience seems to cease as ``our'' body is dreamless sleeping, swoon or eventually die, so I think its permanence is discarded by common experience. Therefore, I don't believe that there is a such thing as a subject, or a soul, constituting a fundamental entity of the mental world, which would have an existence of its own and evolve across time, and I will only refer to \textit{instantaneous} subjective experiences, which are not related to each other across time in the form of a personal history at a fundamental level.
 
-\section{Collective mind}
+\section{Mental state}
 
-The states of the mental world are supposed to be experienced collectively by the set of all ``sentient beings''. A state $\cms$ of the mental world can also be described by the number $\bM N \ims$ of ``sentient beings'' experiencing each possible individual mind state $\ims$. An arbitrary sequence $\bFM N \ims$, however, doesn't necessarily correspond to a possible collective mind state $\cms$. In fact, as a consequence of the correspondence between mental and quantum states defined subsequently and of the finite dimensionality of the Hilbert space of the quantum states, there must be a finite number of possible collective and individual mind states. The set of all possible collective mind states is written $\CMS$.
+The states of the mental world are supposed to be experienced by a various number of subjects. A state $\cms$ of the mental world can also be described by the number $\bM N \ims$ of subjects having each possible subjective experience $\ims$. An arbitrary sequence $\bFM N \ims$, however, doesn't necessarily correspond to a possible mental state $\cms$. In fact, as a consequence of the correspondence between mental and quantum states defined subsequently and of the finite dimensionality of the Hilbert space of the quantum states, there must be a finite number of possible mental states, and a fortiori of possible subjective experiences. The set of all possible mental states is written $\CMS$.
 
 \section{Physical realization of mental states}
 
@@ -22,21 +22,21 @@ The correspondence between mental and quantum states is given by a Hilbert subsp
 \begin{equation*}
 \H = \bigoplus_{\cms}^\perp \H_\cms
 \end{equation*}
-Each vector $\ket \Psi \in \H_\cms \setminus \{0\}$ is a quantum state of the universe in which the mental state $\cms$ is being experienced. Knowing the correspondence between mental states and mental subspaces is in essence solving the mind-body problem. As a working hypothesis, I shall assume that a mental state $\cms = \bFM N \ims$ is being realized physically by any quantum state describing a universe containing, for each individual mind state $\ims$, exactly $\bM N \ims$ human or animal brains presenting the specific activity pattern corresponding to $\ims$. The task of describing the possible individual mind states belongs in principle to psychology or philosophical phenomenology, whereas the characterization of the corresponding activity patterns of the brain is the aim of cognitive neuroscience.
+Each vector $\ket \Psi \in \H_\cms \setminus \{0\}$ is a quantum state of the universe in which the mental state $\cms$ is being experienced. Knowing the correspondence between mental states and mental subspaces is in essence solving the mind-body problem. As a working hypothesis, I shall assume that a mental state $\cms = \bFM N \ims$ is being realized physically by any quantum state describing a universe containing, for each subjective experience $\ims$, exactly $\bM N \ims$ human or animal brains presenting the specific activity pattern corresponding to $\ims$. The task of describing the possible subjective experiences belongs in principle to psychology or philosophical phenomenology, whereas the characterization of the corresponding activity patterns of the brain is the aim of cognitive neuroscience.
 
-In mathematical terms, this hypothesis can be modeled as follows. First, the mental state $\cms_\vac \eqdef \bFM 0 \ims$, in which no ``sentient being'' is experiencing any individual mind state, is supposed to be possible, \textit{i.e.} the corresponding subspace $\H_{\cms_\vac}$ is supposed not to be reduced to the zero subspace. Then, for each possible individual mind state $\ims$, there is supposed to be a finite family of brain creation operators $(\dop{\Psi_\ims^\alpha})$ in $\cAlg$, which are creating a single brain with an activity pattern corresponding to $\ims$, such that:
+In mathematical terms, this hypothesis can be modeled as follows. First, the mental state $\cms_\vac \eqdef \bFM 0 \ims$, in which no subject is having any subjective experience, is supposed to be possible, \textit{i.e.} the corresponding subspace $\H_{\cms_\vac}$ is supposed not to be reduced to the zero subspace. Then, for each possible subjective experience $\ims$, there is supposed to be a finite family of brain creation operators $(\dop{\Psi_\ims^\alpha})$ in $\cAlg$, which are creating a single brain with an activity pattern corresponding to $\ims$, such that:
 \begin{equation*}
 \H_{\bM 1 \ims} = \bigoplus_{\alpha}^\perp \dop{\Psi_\ims^\alpha} \H_{\cms_\vac}
 \end{equation*}
-Finally, for every collective mental state $\cms$, noting $\cms + \bM 1 \ims$ the collective mental state in which a single further ``sentient being'' is experiencing the individual mental state $\ims$, the corresponding subspaces are supposed to verify:
+Finally, for every mental state $\cms$, noting $\cms + \bM 1 \ims$ the mental state in which a single further subject is having the subjective experience $\ims$, the corresponding subspaces are supposed to verify:
 \begin{equation*}
 \H_{\cms + \bM 1 \ims} = \sum_{\alpha} \dop{\Psi_\ims^\alpha} \H_{\cms}
 \end{equation*}
 These relations define all the subspaces $\H_{\cms}$ recursively as a function of $\H_{\cms_\vac}$ and of the operators $\dop{\Psi_\ims^\alpha}$. If a subspace defined in this way happens to be zero (because of the existence of a maximum occupation number for single field modes), the corresponding mental state is impossible.
 
-Given two collective mental states $\cms = \bFM N \ims$ and $\cms' = \bFM {N'} \ims$, we define the partial order relation $\cms' \geq \cms$ by $\forall \ims, \bM {N'} \ims \geq \bM N \ims$. The subspace $\H_{\cms}^+$ of the quantum states corresponding to collective mental states where at least $\bM N \ims$ ``sentient beings'' are experiencing each individual mental state $\ims$ can be defined, with this notation, by:
+Given two mental states $\cms = \bFM N \ims$ and $\cms' = \bFM {N'} \ims$, we define the partial order relation $\cms' \geq \cms$ by $\forall \ims, \bM {N'} \ims \geq \bM N \ims$. The subspace $\H_{\cms}^+$ of the quantum states corresponding to mental states where at least $\bM N \ims$ subjects are having each subjective experience $\ims$ can be defined, with this notation, by:
 \begin{equation*}
 \H_{\cms}^+ \eqdef \bigoplus_{\cms' \geq \cms}^\perp \H_{\cms'}
 \end{equation*}
 
-\paragraphtitle{Commentaries} The different brain creation operators $\dop{\Psi_\ims^\alpha}$ corresponding to the same individual mind state $\ims$ may differ for instance by a translation or a rotation of the brain, by any modification of its physical environment which doesn't involve the creation of a second brain, or by any internal modification of the quantum state of the brain itself, insofar as this doesn't influence the associated conscious thoughts. We could think for instance of neurophysiological processes involved in the unconscious brain activity or of irrelevant low-level biochemical processes.
+\paragraphtitle{Commentaries} The different brain creation operators $\dop{\Psi_\ims^\alpha}$ corresponding to the same subjective experience $\ims$ may differ for instance by a translation or a rotation of the brain, by any modification of its physical environment which doesn't involve the creation of a second brain, or by any internal modification of the quantum state of the brain itself, insofar as this doesn't influence the associated conscious thoughts. We could think for instance of neurophysiological processes involved in the unconscious brain activity or of irrelevant low-level biochemical processes.
