--- a/chapter-metaphysics.tex
+++ b/chapter-metaphysics.tex
@@ -12,7 +12,7 @@ Since the interpretation of Quantum Field Theory I am about to give has been ins
 
 Interestingly, Spinoza's metaphysical concepts can be identified quite straightforwardly with the fundamental notions of Quantum Field Theory, thus providing them with a naturalistic basis. On the other hand, Quantum Field Theory, generally considered to be counter-intuitive, paradoxical and hardly understandable, becomes grounded in a very classical philosophical tradition and should thus become accessible to a broader range of Science philosophers.
 
-The states (modes) of God (the substance) are evidently identified, under their material aspect, with the quantum states $\ket \Psi$ of the universe (the elements of the Hilbert space $\H$), and, under their mental aspect, with the collective mind states $\cms$ (the elements of $\CMS$). The relation between the material and the mental aspects is given by the decomposition $\H = \bigoplus_{\cms}^\perp \H_\cms$ of the Hilbert space, or equivalently by the orthogonal projection operators $\op{\Pi}_\cms$, relating each mental state $\cms$ with the set of all corresponding quantum states $\H_\cms$. Furthermore, the nature of God encompasses the laws of Physics, given by the Hamilton operator $\Hop$, or more precisely by the elementary evolution operator $\op U_\tau \eqdef \exp{- \i 2 \pi \Hop \tau / \h}$. God can finally be defined as a mathematical structure $\God$ given by:
+The states (modes) of God (the substance) are evidently identified, under their material aspect, with the quantum states $\ket \Psi$ of the universe (the elements of the Hilbert space $\H$), and, under their mental aspect, with the mental states $\cms$ (the elements of $\CMS$). The relation between the material and the mental aspects is given by the decomposition $\H = \bigoplus_{\cms}^\perp \H_\cms$ of the Hilbert space, or equivalently by the orthogonal projection operators $\op{\Pi}_\cms$, relating each mental state $\cms$ with the set of all corresponding quantum states $\H_\cms$. Furthermore, the nature of God encompasses the laws of Physics, given by the Hamilton operator $\Hop$, or more precisely by the elementary evolution operator $\op U_\tau \eqdef \exp{- \i 2 \pi \Hop \tau / \h}$. God can finally be defined as a mathematical structure $\God$ given by:
 \begin{equation*}
 \God \eqdef \left( \H \times \CMS, (\op{\Pi}_\cms), \op U_\tau \right)
 \end{equation*}
