--- a/chapter-stochastic-evolution.tex
+++ b/chapter-stochastic-evolution.tex
@@ -4,13 +4,13 @@
 \renewcommand{\epigraphwidth}{7cm}
 \epigraph{It sounded quite a sensible voice, but it just said, ``Two to the power of one hundred thousand to one against and falling,'' and that was all.}{Douglas Adams,\\\textit{The Hitchhiker's Guide to the Galaxy}~\cite{Adams1979}}
 
-\section{Collapse and collective mind selection}
+\section{Collapse and mental state selection}
 
 In the joint evolution of the mental and quantum states of the universe, I suppose that the quantum state $\ket \Psi$ periodically becomes randomly projected into one of the mental subspaces $\H_\cms$, corresponding to a given mental state $\cms$, with a probability given by:
 \begin{equation*}
 P(\cms) = \frac{\bra\Psi \op{\Pi}_\cms \ket\Psi}{\braket\Psi\Psi}
 \end{equation*}
-where $\op{\Pi}_\cms$ is the orthogonal projection operator on $\H_\cms$. Furthermore, I suppose that this projection corresponds to the fact that, in the mental world, the collective mind state $\cms = \bFM N \ims$ is being experienced, \textit{i.e.} each possible individual mind state $\ims$ is being experienced by $\bM N \ims$ individual minds. We call the material part of this process ``collapse'' of the quantum state of the universe and its mental counterpart ``collective mind selection''. The operators $\op{\Pi}_\cms$ are called ``collapse operators''. As a working hypothesis, we assume that the period $\tau$ of this process is of the order of the Plank time:
+where $\op{\Pi}_\cms$ is the orthogonal projection operator on $\H_\cms$. Furthermore, I suppose that this projection corresponds to the fact that, in the mental world, the mental state $\cms = \bFM N \ims$ is being experienced, \textit{i.e.} that $\bM N \ims$ subjects are having each possible subjective experience $\ims$. We call the material part of this process ``collapse'' of the quantum state of the universe and its mental counterpart ``selection'' of the mental state. The operators $\op{\Pi}_\cms$ are called ``collapse operators''. As a working hypothesis, we assume that the period $\tau$ of this process is of the order of the Plank time:
 \begin{equation*}
 \tau \approx \sqrt{4\pi\G \h/\c^5}\approx4.8~10^{-43}\ \mathrm s
 \end{equation*}
@@ -18,7 +18,7 @@ where $\op{\Pi}_\cms$ is the orthogonal projection operator on $\H_\cms$. Furthe
 \section{Mental evolution}
 \label{Mental evolution}
 
-Fundamentally, Quantum Field Theory also defines the probability that any given succession of collective mind states be experienced, an initial quantum state being given. Explicitly, for an initial quantum state $\ket{\Psi_i} \neq 0$ at time $t_i = 0$, the probability $\mathrm P_t(\cms_0, \dotsc, \cms_t; \ket{\Psi_i})$, where $t \in \IN$, that a given sequence $\cms_0, \dotsc, \cms_t$ is being experienced at times $0, \dotsc, t \tau$, reads for $t = 0$:
+Fundamentally, Quantum Field Theory also defines the probability that any given succession of mental states be experienced, an initial quantum state being given. Explicitly, for an initial quantum state $\ket{\Psi_i} \neq 0$ at time $t_i = 0$, the probability $\mathrm P_t(\cms_0, \dotsc, \cms_t; \ket{\Psi_i})$, where $t \in \IN$, that a given sequence $\cms_0, \dotsc, \cms_t$ is being experienced at times $0, \dotsc, t \tau$, reads for $t = 0$:
 \begin{equation*}
 \mathrm P_0(\cms_0; \ket{\Psi_i}) = \bra{\Psi_i} \op \Pi_{\cms_0} \ket{\Psi_i} / \braket{\Psi_i}{\Psi_i}
 \end{equation*}
@@ -42,7 +42,7 @@ If the initial vector state isn't exactly known, but belongs to a given subspace
 \left< \mathrm P_t(\cms_0, \dotsc, \cms_t; \ket{\Psi_i}) \right>_{\H_i} = \mathrm{Tr}_{\H_i} \op \Pi_{\cms_0} \dop U_\tau \op \Pi_{\cms_1} \dotsm \dop U_\tau \op \Pi_{\cms_t} \op U_\tau \dotsm \op \Pi_{\cms_1} \op U_\tau \op \Pi_{\cms_0} / \mathrm{dim} \H_i
 \end{equation*}
 
-The total probability $P_t(\cms_t; \ket{\Psi_i})$ that a given collective mind state $\cms_t$ is being experienced at time $t \tau$, where $t \in \IN$, reads for $t = 0$:
+The total probability $P_t(\cms_t; \ket{\Psi_i})$ that a given mental state $\cms_t$ is being experienced at time $t \tau$, where $t \in \IN$, reads for $t = 0$:
 \begin{equation*}
 P_0(\cms_0; \ket{\Psi_i}) = \mathrm P_0(\cms_0; \ket{\Psi_i})
 \end{equation*}
@@ -51,17 +51,17 @@ and more generally for $t \geq 1$:
 P_t(\cms_t; \ket{\Psi_i}) = \sum_{\cms_{t - 1}} \dotsm \sum_{\cms_0} \mathrm P_t(\cms_0, \dotsc, \cms_t; \ket{\Psi_i})
 \end{equation*}
 
-\paragraphtitle{Complements} In the case where the actually experienced collective mind state has a relatively high probability, our mental state may give us some clues about the physics of the world we live in; on the opposite, if our collective mind state has a very low probability, our mental experience has very little to do with the laws of the physical world and we live in a mere illusion of knowing something about the material reality -- without having any mean of noticing it. This dilemma is very well known of particle physicists, who have to accept they cannot make more precise statements about reality than, for instance, ``in the context of the standard model and in the presence of a sequential fourth family of fermions with high masses [...] a Higgs boson with mass between 144 and 207 GeV/$\mathrm{c}^2$ is ruled out at 95\% confidence level''~\cite{CMS2011}. Any physical model can also be conventionally, but not definitely, ``ruled out'' if it predicts the observed results with a probability considered to be too low.
+\paragraphtitle{Complements} In the case where the actually experienced mental state has a relatively high probability, our subjective experience may give us some clues about the physics of the world we live in; on the opposite, if our mental state has a very low probability, our subjective experience has very little to do with the laws of the physical world and we live in a mere illusion of knowing something about the material reality -- without having any mean of noticing it. This dilemma is very well known of particle physicists, who have to accept they cannot make more precise statements about reality than, for instance, ``in the context of the standard model and in the presence of a sequential fourth family of fermions with high masses [...] a Higgs boson with mass between 144 and 207 GeV/$\mathrm{c}^2$ is ruled out at 95\% confidence level''~\cite{CMS2011}. Any physical model can also be conventionally, but not definitely, ``ruled out'' if it predicts the observed results with a probability considered to be too low.
 
 \section{Transition probability}
 
 We consider, to simplify the discussion, a repeated experiment with a single possible outcome, which may have been realized or not after a given duration $t \tau$. Notice that this duration doesn't correspond to the instant at which some physical event occurs, but is a sufficiently long duration after which the experimenter can consciously remember of having (just) observed the expected outcome or not.
 
-The possible states of the minds corresponding to the beginning of the experiment are written $\cms_i$ and the initial state of the quantum fields is also an element of the Hilbert subspace $\H_i$ given by:
+The possible mental states corresponding to the beginning of the experiment are written $\cms_i$ and the initial state of the quantum fields is also an element of the Hilbert subspace $\H_i$ given by:
 \begin{equation*}
 \H_i = \bigoplus_{\cms_i}^\perp \H_{\cms_i}
 \end{equation*}
-The possible states of the minds corresponding to the measurement of the given outcome resp. of its absence are written $\cms_f^+$ resp. $\cms_f^-$. If the experiment works correctly, the final state of the quantum fields is, after measurement, an element of either of the Hilbert subspaces $\H_f^+$ or $\H_f^-$ given by:
+The possible mental states corresponding to the measurement of the given outcome resp. of its absence are written $\cms_f^+$ resp. $\cms_f^-$. If the experiment works correctly, the final state of the quantum fields is, after measurement, an element of either of the Hilbert subspaces $\H_f^+$ or $\H_f^-$ given by:
 \begin{equation*}
 \H_f^\pm = \bigoplus_{\cms_f^\pm}^\perp \H_{\cms_f^\pm}
 \end{equation*}
@@ -77,7 +77,7 @@ where $\op \Pi_{f^\pm} = \sum_{\cms_f^\pm} \op \Pi_{\cms_f^\pm}$. The conditiona
 \end{equation*}
 and we call it ``transition probability'' from $\H_i$ to $\H_f^+$.
 
-If the experiment is conceived in such a way that the studied system is isolated from the observer for the duration of the experiment until it interacts with some measurement apparatus, the experiment is considered to have failed if the observer has gained some information about the studied system before it interacts with this apparatus. An intermediate observation of the system, as it would leave a permanent trace in the memory of the observer, would lead with a vanishingly small probability to a final state of the minds in which the observer isn't conscious of having made this observation. The only intermediate states of the minds $\cms_1, \dotsc, \cms_{t - 1}$ to be considered in the above sums (\textit{i.e.} which haven't a vanishingly small contribution to the transition probability) correspond also to projectors that don't affect the Hamiltonian evolution of the studied system. In that case, the absolute probability of measuring the given outcome resp. its absence can be approximated by:
+If the experiment is conceived in such a way that the studied system is isolated from the observer for the duration of the experiment until it interacts with some measurement apparatus, the experiment is considered to have failed if the observer has gained some information about the studied system before it interacts with this apparatus. An intermediate observation of the system, as it would leave a permanent trace in the memory of the observer, would lead with a vanishingly small probability to a final mental state in which the observer isn't conscious of having made this observation. The only intermediate mental states $\cms_1, \dotsc, \cms_{t - 1}$ to be considered in the above sums (\textit{i.e.} which haven't a vanishingly small contribution to the transition probability) correspond also to projectors that don't affect the Hamiltonian evolution of the studied system. In that case, the absolute probability of measuring the given outcome resp. its absence can be approximated by:
 \begin{equation*}
 \TP{\H_i}{\H_f^\pm} \approx \mathrm{Tr}_{\H_i} \dop U_{t \tau} \op \Pi_{f^\pm} \op U_{t \tau} / \mathrm{dim} \H_i
 \end{equation*}
@@ -196,7 +196,7 @@ Finally, the observer is becoming aware of the fact that the detector has been a
 \hspace*{3mm}\Superposition\hspace*{3mm}
 \Atom\hspace*{3mm}\DetectorOn\hspace*{3mm}\ObserverOn
 \end{flushleft}
-This (purely material) situation lasts until the next process of collapse and collective mind selection takes place. The experienced consciousness state of the observer is then, randomly, either one of ``I am still waiting for the detector to get activated'' or ``I have seen the detector becoming activated''. In the first case, the quantum state of the universe becomes again:
+This (purely material) situation lasts until the next process of collapse and mental state selection takes place. The experienced consciousness state of the observer is then, randomly, either one of ``I am still waiting for the detector to get activated'' or ``I have seen the detector becoming activated''. In the first case, the quantum state of the universe becomes again:
 \begin{flushleft}
 \ExcitedAtom\hspace*{3mm}\DetectorOff\hspace*{3mm}\ObserverOff
 \hspace*{3mm}\Superposition\hspace*{3mm}
@@ -208,7 +208,7 @@ This (purely material) situation lasts until the next process of collapse and co
 \begin{flushleft}
 \Atom\hspace*{3mm}\DetectorOn\hspace*{3mm}\ObserverOn
 \end{flushleft}
-and the atom has definitely decayed. The probability $\delta P$ of this event to occur is very small, but the process of collapse and collective mind selection take place very often, with a period $\tau$, so that the decay of the atom should eventually be observed. The leading order approximation of this elementary probability takes the form:
+and the atom has definitely decayed. The probability $\delta P$ of this event to occur is very small, but the process of collapse and mental state selection take place very often, with a period $\tau$, so that the decay of the atom should eventually be observed. The leading order approximation of this elementary probability takes the form:
 \begin{equation*}
 \delta P \approx ( 2 \pi )^2 \frac\tau\h \sum_f \left| H'_{f,i} \right|^2 \deltaE2{E_f - E_i}
 \end{equation*}
@@ -220,4 +220,4 @@ It can be approximated in this case, since $\delta P \ll 1$, by:
 \begin{equation*}
 \left< t - t_0 \right> \approx \Delta t + \h \Big[ ( 2 \pi )^2 \sum_f \left| H'_{f,i} \right|^2 \deltaE2{E_f - E_i} \Big]^{-1}
 \end{equation*}
-Note that this result doesn't depend on the period $\tau$ of the collapse and collective mind selection process.
+Note that this result doesn't depend on the period $\tau$ of the collapse and mental state selection process.
