--- a/notations.tex
+++ b/notations.tex
@@ -202,9 +202,9 @@
 \newcommand{\cphotonspin}[2]{\sv \varepsilon_{{#1},{#2}}^*} % Conjugate photon polarization vector
 
 % Mental notations
-\newcommand{\CMS}{\mathcal M} % Set of all collective mental states
-\newcommand{\ims}{\mathfrak{m}} % Placeholder individual mind state
-\newcommand{\cms}{\mathfrak{M}} % Placeholder collective mind state
+\newcommand{\CMS}{\mathcal M} % Set of all mental states
+\newcommand{\ims}{\mathfrak{m}} % Placeholder subjective experience
+\newcommand{\cms}{\mathfrak{M}} % Placeholder mental state
 \newcommand{\bM}[2]{{#1}_{#2}} % Mental state indices
 \newcommand{\bFM}[2]{({#1}_{#2})} % Mental field indices
 
