--- a/chapter-philosophical-issues.tex
+++ b/chapter-philosophical-issues.tex
@@ -3,11 +3,11 @@
 
 \section{The explanatory gap}
 
-As it has been observed by science philosophers in the last century, the gap between our understanding level of physical-material and of mental phenomena has been continuously growing as the scientific community successfully focused on the development of the Relativity and Quantum theories. It is therefore quite understandable on a science psychological level that some cognitive neuroscientists may have been hoping to be able to explain one day all mental phenomena in terms of biophysical processes. However, even if we could describe one day the correspondence between mental states and quantum states of the brain, the question of knowing ``why'' some specific aspects of the material world correspond to certain mental experiences, and why some other aspects do not, would still remain open. This question is known as the ``explanatory gap'' and isn't to be answered by a theory focusing uniquely on the material world. The theory developed in this book addresses this issue in a threefold way. First, it gives a well-defined status to mental states, considered to be an aspect of reality on their own that isn't merely derived from the material one. This is expressed in the theory by the form  $\H \times \CMS$ of the set of the possible states of God. Second, it defines the form of the correspondence between material and mental states, which is given by the family of the supplementary subspaces $\H_\cms$ corresponding to each possible mental state $\cms$. This stresses the idea that individual mental experiences are not necessarily only related to material aspects of a single, individual brain, but that the collective mental experience globally relates to the quantum state of the world as a whole. Finally, the description of the random collapse process from a virtual into a real state of God gives a first explanation of what is happening at a material and at a mental level as a mental state is getting experienced.
+As it has been observed by science philosophers in the last century, the gap between our understanding level of physical-material and of mental phenomena has been continuously growing as the scientific community successfully focused on the development of the Relativity and Quantum theories. It is therefore quite understandable on a science psychological level that some cognitive neuroscientists may have been hoping to be able to explain one day all mental phenomena in terms of biophysical processes. However, even if we could describe one day the correspondence between mental states and quantum states of the brain, the question of knowing ``why'' some specific aspects of the material world correspond to certain mental experiences, and why some other aspects do not, would still remain open. This question is known as the ``explanatory gap'' and isn't to be answered by a theory focusing uniquely on the material world. The theory developed in this book addresses this issue in a threefold way. First, it gives a well-defined status to mental states, considered to be an aspect of reality on their own that isn't merely derived from the material one. This is expressed in the theory by the form  $\H \times \CMS$ of the set of the possible states of God. Second, it defines the form of the correspondence between material and mental states, which is given by the family of the supplementary subspaces $\H_\cms$ corresponding to each possible mental state $\cms$. This stresses the idea that individual subjective experiences are not necessarily only related to material aspects of a single, individual brain, but that the totality of all subjective experiences globally relates to the quantum state of the universe. Finally, the description of the random collapse process from a virtual into a real state of God gives a first explanation of what is happening at a material and at a mental level as a mental state is getting experienced.
 
 \section{Skepticism}
 
-According to philosophical skepticism, in the form of Descartes' \textit{Cogito Ergo Sum} argument in his \textit{Discourse on the Method}~\cite{Descartes1637} for instance, the one and only aspect of the world which we know beyond any doubt to be real is the experience of our present individual mind state, the `Cogito'. Nothing can guarantee us that the representations of the world carried by this mind state -- like our past experiences, the feeling of the permanence of our existence, the image of our body, of the outer world, of our relations to others -- have or have had any physical reality. In particular, it cannot be taken for granted that experimental evidence can be accumulated over the ages: Experimental science \textit{must} rely on the mere belief that the mental representations of what we consider to be accumulated experimental evidence are related to physical processes that really did happen in the past. Indeed, in physical terms, stating that I am experiencing some individual mind state $\ims_s$ only implies that the collective mind state $\cms = \bFM N \ims$ is such that $\bM N {\ims_s} \geq 1$ and that the quantum state $\ket \Psi$ of the universe belongs to $\H_{\ims_s}^+$. It doesn't necessarily imply that the past evolution of $\ket \Psi$ corresponds to the mental representation of past experiences in the mind state $\ims_s$. The physical theory presented in this book belongs therefore to the long tradition of philosophical skepticism insofar as it doubts the very possibility of experimental science.
+According to philosophical skepticism, in the form of Descartes' \textit{Cogito Ergo Sum} argument in his \textit{Discourse on the Method}~\cite{Descartes1637} for instance, the one and only aspect of the world which we know beyond any doubt to be real is our present subjective experience, the `Cogito'. Nothing can guarantee us that the representations of the world it carries -- like our past experiences, the feeling of the permanence of our existence, the image of our body, of the outer world, of our relations to others -- have or have had any physical reality. In particular, it cannot be taken for granted that experimental evidence can be accumulated over the ages: Experimental science \textit{must} rely on the mere belief that the mental representations of what we consider to be accumulated experimental evidence are related to physical processes that really did happen in the past. Indeed, in physical terms, stating that I am having some subjective experience $\ims_s$ only implies that the mental state $\cms = \bFM N \ims$ is such that $\bM N {\ims_s} \geq 1$ and that the quantum state $\ket \Psi$ of the universe belongs to $\H_{\ims_s}^+$. It doesn't necessarily imply that the past evolution of $\ket \Psi$ corresponds to the mental representation of past events in the subjective experience $\ims_s$. The physical theory presented in this book belongs therefore to the long tradition of philosophical skepticism insofar as it doubts the very possibility of experimental science.
 
 %TODO: Philosophical issues: Personal identity
 %\section{Personal identity}
@@ -20,11 +20,11 @@ According to philosophical skepticism, in the form of Descartes' \textit{Cogito 
 
 \section{Materialism}
 
-Materialism is the doctrine according to which the subjective experience of consciousness can be completely reduced to the corresponding physical-material processes happening within our brains and thus can be explained without involving any other level of reality than the purely material one. It is generally considered among philosophers as the daydream of a physicist absorbed by his study object and becoming blind for the reality of his own subjective experience. Nevertheless, it still has numerous supporters in today's scientific community. In the frame of the theory developed in this book, it could be formulated as the hypothesis that no individual mind state is possible, since this would be equivalent to denying the existence of the mental world, which is of another nature as the material one. Mathematically, this hypothesis can be expressed simply as $\H_{\cms_\vac} = \H$, so that no individual mind state is being experienced in any quantum state. Equivalently, this could be expressed in terms of collapse operators by $\op{\Pi}_{\cms_\vac} = \Id$, so that there is no collapse of the quantum state of the universe. Its evolution reduces therefore to its Hamiltonian part,
+Materialism is the doctrine according to which the subjective experience of consciousness can be completely reduced to the corresponding physical-material processes happening within our brains and thus can be explained without involving any other level of reality than the purely material one. It is generally considered among philosophers as the daydream of a physicist absorbed by his study object and becoming blind for the reality of his own subjective experience. Nevertheless, it still has numerous supporters in today's scientific community. In the frame of the theory developed in this book, it could be formulated as the hypothesis that no subjective experience is possible, since this would be equivalent to denying the existence of the mental world, which is of another nature as the material one. Mathematically, this hypothesis can be expressed simply as $\H_{\cms_\vac} = \H$, so that no subject is having any subjective experience in any quantum state. Equivalently, this could be expressed in terms of collapse operators by $\op{\Pi}_{\cms_\vac} = \Id$, so that there is no collapse of the quantum state of the universe. Its evolution reduces therefore to its Hamiltonian part,
 \begin{eqnarray*}
 \ket{\Psi(t)} & = & \exp{- \i 2 \pi \frac{t - t_0} \h \Hop} \ket{\Psi(t_0)}
 \end{eqnarray*}
-and the stochastic process of collective mind selection do not apply.
+and the stochastic process of mental state selection do not apply.
 
 Materialism in this context is facing the problem that it cannot satisfactorily explain how it is supposed to ``feel like'' in quantum states where brains happen to be in a quantum superposition of states corresponding to different states of consciousness. This would be the case for instance in a state of the form:
 \begin{equation*}
@@ -36,11 +36,11 @@ The second way of escaping the difficulties of materialism is to deny that there
 
 \section{Solipsism}
 
-The solipsist is convinced that she is (and must be) the only person in the universe who has a subjective mental experience. Solipsism makes thus unproblematic the fact that we are experiencing the mental world in the form of a single individual mind instead of experiencing the whole collective mind state directly. In the frame of the theory developed in this book, solipsism can be expressed as the hypothesis that the only possible collective mind states (apart from $\cms_\vac$) are of the form $\bM 1 \ims$, or in physical terms, that:
+The solipsist is convinced that she is (and must be) the only person in the universe who has a subjective experience. Solipsism makes thus unproblematic the fact that we are experiencing the mental world in the form of a single subjective experience instead of experiencing the whole mental state directly. In the frame of the theory developed in this book, solipsism can be expressed as the hypothesis that the only possible mental states (apart from $\cms_\vac$) are of the form $\bM 1 \ims$, or in physical terms, that:
 \begin{equation*}
 \H = \H_{\cms_\vac} \operp \bigoplus_{\ims}^\perp \H_{\bM 1 \ims}
 \end{equation*}
-Of course, this hypothesis is logically perfectly correct, but it is utmost difficult to make it compatible with the idea that mind states are being realized physically by the presence of corresponding quantum states of brains. Even if one supposes that the solipsist's brain has something special that makes it differ from other brains that aren't being experienced as individual mind states, one faces the problem that a quantum state in which many ``copies'' of the solipsist's brain, corresponding to different individual mind states, would be present couldn't be related in a satisfactory way to a single individual mind state: It is unclear, for instance, if quantum states in a subspace of the form $\dop{\Psi_{\ims'}^{\alpha'}} \dop{\Psi_\ims^\alpha} \H_{\cms_\vac}$ should be experienced as the mental state $\bM 1 \ims$ or $\bM 1 {\ims'}$.
+Of course, this hypothesis is logically perfectly correct, but it is utmost difficult to make it compatible with the idea that mental states are being realized physically by the presence of corresponding quantum states of brains. Even if one supposes that the solipsist's brain has something special that makes it differ from other brains that aren't giving rise to a subjective experience, one faces the problem that a quantum state in which many ``copies'' of the solipsist's brain, corresponding to different subjective experiences, would be present couldn't be related in a satisfactory way to a single subjective experience: It is unclear, for instance, if quantum states in a subspace of the form $\dop{\Psi_{\ims'}^{\alpha'}} \dop{\Psi_\ims^\alpha} \H_{\cms_\vac}$ should be experienced as $\bM 1 \ims$ or $\bM 1 {\ims'}$.
 
 %TODO: Philosophical issues: Soul
 %\section{Soul}
@@ -55,7 +55,7 @@ Of course, this hypothesis is logically perfectly correct, but it is utmost diff
 
 \section{Soul immortality theorem}
 
-\paragraphtitle{Reminder} As stated in section \ref{Mental evolution}, Quantum Field Theory defines, for an arbitrary initial quantum state $\ket{\Psi_i} \neq 0$ realized at the initial time $t_i = 0$, the probability laws $\mathrm P_t(\cms_0, \dotsc, \cms_t; \ket{\Psi_i})$, where $t \in \IN$, that a given sequence of collective mind states $\cms_0, \dotsc, \cms_t$ is being experienced at times $0, \dotsc, t \tau$. These probability laws read:
+\paragraphtitle{Reminder} As stated in section \ref{Mental evolution}, Quantum Field Theory defines, for an arbitrary initial quantum state $\ket{\Psi_i} \neq 0$ realized at the initial time $t_i = 0$, the probability laws $\mathrm P_t(\cms_0, \dotsc, \cms_t; \ket{\Psi_i})$, where $t \in \IN$, that a given sequence of mental states $\cms_0, \dotsc, \cms_t$ is being experienced at times $0, \dotsc, t \tau$. These probability laws read:
 \begin{equation*}
 \mathrm P_t(\cms_0, \dotsc, \cms_t; \ket{\Psi_i}) = \bra{\Psi_i} \op \Pi_{\cms_0} \dop U_\tau \op \Pi_{\cms_1} \dotsm \dop U_\tau \op \Pi_{\cms_t} \op U_\tau \dotsm \op \Pi_{\cms_1} \op U_\tau \op \Pi_{\cms_0} \ket{\Psi_i} / \braket{\Psi_i}{\Psi_i}
 \end{equation*}
